[project]
name = "psh-pytorch"
version = "0.0.2"
authors = [
  { name="David Li", email="david@davidl.me" },
]
description = "Perfect Spatial Hashing in PyTorch"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/dli7319/psh-pytorch"
"Bug Tracker" = "https://github.com/dli7319/psh-pytorch/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]